@@ -12,6 +12,7 @@ lib/HTML/Latemp/NavLinks/GenHtml.pm
 lib/HTML/Latemp/NavLinks/GenHtml/ArrowImages.pm
 lib/HTML/Latemp/NavLinks/GenHtml/Text.pm
 scripts/bump-version-number.pl
+scripts/tag-release.pl
 t/00-load.t
 t/01-run.t
 t/cpan-changes.t
